Ticket #241: Added lazy-loading columns in datastore-tree