@@ -1,4 +1,5 @@
 @echo off
+
 rem  This file is part of DataCleaner.
 rem
 rem  DataCleaner is free software: you can redistribute it and/or modify
@@ -14,8 +15,7 @@ rem
 rem  You should have received a copy of the GNU General Public License
 rem  along with DataCleaner.  If not, see <http://www.gnu.org/licenses/>.
 
-set DATACLEANER_HOME=%~dp0
-cd /d %DATACLEANER_HOME%
-echo Using DATACLEANER_HOME: %DATACLEANER_HOME%
-
-call java -Xmx1024m -XX:MaxPermSize=256m -jar datacleaner.jar
+call mvn install
+cd DataCleaner-packaging\target\dist
+call datacleaner.cmd
+cd ..\..\..
